# bpsr-module-optimizer

./: .gitignore  README.en.md  README.md  index.html  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: release.yml
bpsr-core/: Cargo.toml  build.rs
bpsr-core/data/json/: ConsumableBuffIds.json  MonsterNameBoss.json  SkillName.json
bpsr-core/src/: compute.rs  error.rs  lib.rs  models.rs
bpsr-core/src/capture/: binary_reader.rs  mod.rs  server.rs  status.rs  tcp_reassembler.rs  windivert.rs
bpsr-core/src/engine/: buff_dictionary.rs  buff_source.rs  buff_tracker.rs  calculator.rs  class.rs  combat_stats.rs  consumables.rs  demo.rs  encounter.rs  entity.rs  event.rs  history.rs  mod.rs  modules.rs  monster_names.rs  name_cache.rs  processor.rs  runtime_settings.rs  selected_uid.rs  skill_names.rs
bpsr-core/src/protocol/: constants.rs  mod.rs  opcodes.rs  packet_parser.rs  pb.proto  pb.rs
docs/: release-notes-gpu-footer.md
scripts/: run.ps1
src/: App.tsx  api.ts  i18n.tsx  index.css  storage.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windivert-hooks.nsh
src-tauri/src/: attrs.rs  capture.rs  elevation.rs  lib.rs  main.rs  optimize.wgsl  optimize_chunked.wgsl  optimizer.rs  optimizer_gpu.rs  state.rs
src/components/: AttributePicker.tsx  BuildCompare.tsx  BuildFingerprint.tsx  ConditionSummary.tsx  ConfirmButton.tsx  FavoritesPanel.tsx  Footer.tsx  PresetBar.tsx  RequirementList.tsx  SolutionCard.tsx  StatusBar.tsx
src/hooks/: useFavorites.ts  usePresets.ts
