[package]
name = "bpsr-module-optimizer"
version = "0.3.0"
description = "Star Resonance モジュール最適化ツール（所持モジュールから戦闘力スコア最大の4枠を探索）"
authors = ["Rererr"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/Rererr/bpsr-module-optimizer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bpsr_module_optimizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bpsr-core = { path = "../bpsr-core" }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros"] }
prost = "0.14"
log = "0.4"
env_logger = "0.11"

# 実行時自己昇格（管理者へ runas で再起動）に使用。
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
