[package]
name = "bpsr-module-optimizer"
version = "0.6.0"
description = "Star Resonance モジュール最適化ツール（所持モジュールから戦闘力スコア最大の枠を探索。4/5枠に対応）"
authors = ["Rererr"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/Rererr/bpsr-module-optimizer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bpsr_module_optimizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# GPU探索版ビルド専用（詳細はプロジェクトメモリ・src-tauri/src/optimizer_gpu.rs 参照）。
gpu = ["dep:wgpu", "dep:pollster"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bpsr-core = { path = "../bpsr-core" }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros"] }
prost = "0.14"
log = "0.4"
env_logger = "0.11"
rayon = "1"
# dx12 バックエンドは wgpu-hal 29.0.4 が直接依存する windows 0.62 系と、依存先
# gpu-allocator 0.28.0 が固定する windows 0.61 系がクレートグラフ上で衝突しビルド不能
# （upstream の依存不整合）。RTX 5070 は Vulkan を全面サポートするため vulkan のみ有効化する。
wgpu = { version = "29", optional = true, default-features = false, features = [
    "vulkan",
    "wgsl",
    "std",
] }
pollster = { version = "0.4", optional = true }

# 実行時自己昇格（管理者へ runas で再起動）に使用。
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
